--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cycler==0.12.1
 dlib==19.24.2
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+facenet-pytorch==2.5.3
 filelock==3.13.1
 flatbuffers==23.5.26
 fonttools==4.45.1
@@ -25,6 +26,7 @@ google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.59.3
 h5py==3.10.0
+huggingface-hub==0.19.4
 idna==3.4
 imutils==0.5.4
 Jinja2==3.1.2
@@ -41,6 +43,9 @@ mpmath==1.3.0
 networkx==3.2.1
 numba==0.58.1
 numpy==1.24.3
+nvidia-cublas-cu11==11.11.3.6
+nvidia-cuda-nvrtc-cu11==11.8.89
+nvidia-cudnn-cu11==8.9.5.29
 oauthlib==3.2.2
 opencv-contrib-python==4.8.1.78
 opencv-python==4.8.1.78
@@ -51,11 +56,14 @@ protobuf==3.20.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pyodbc==5.0.1
 pyparsing==3.1.1
 python-dateutil==2.8.2
+PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+safetensors==0.4.1
 six==1.16.0
 sounddevice==0.4.6
 sympy==1.12
@@ -66,9 +74,11 @@ tensorflow-estimator==2.13.0
 tensorflow-intel==2.13.1
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
+timm==0.9.12
 torch==2.1.1+cu121
 torchaudio==2.1.1+cu121
 torchvision==0.16.1+cu121
+tqdm==4.66.1
 typing_extensions==4.5.0
 urllib3==2.1.0
 Werkzeug==3.0.1
